--- a/index.html
+++ b/index.html
@@ -5,40 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="./style/underConstruction.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
-    <script src="./scripts/uc.js" defer></script>
-    <title>La Vie Under Construction</title>
+    <title>La Vie</title>
 </head>
 <body>
     <nav class="nevbar-container">
         <div>
             <img src="./assets/images/logo/navLogo.png" alt="">
         </div>
+        <button class="navbar-btn">
+            Contact Us
+        </button>
     </nav>
-    <main id="uc-section">
-        <div class="uc-section-top-container">
-            
-            <div class="uc-section-left-container">
-                <img id="uc-section-main-img" src="./assets/images/underConstruction/uc.png" alt="">
+    <main id="hero-section">
+        <div class="hero-section-top-container">
+            <div class="hero-section-left-container">
+                <h1 class="hero-section-title"><span>Such|</span> is life</h1>
+                <p class="hero-section-subtitle">Behavioral science. Storytelling. Empathy. <br/>
+                    Our 3 pillars for designing experiences.</p>
             </div>
-            <div class="uc-section-right-container">
-                <h1 class="uc-section-title">Site Under <br/>
-                    <span>construction</span>
-                </h1>
-                <p class="uc-section-subtitle">We are evolving our user experience to match your expectations.</p>
+            <div class="hero-section-right-container">
+
             </div>
         </div>
-        <div class="uc-section-bottom-container">
-            <div class="uc-section-bottom-container-copy-container">
-                <p>&copy; 2023 La Vie Design Studio LLP. All rights reserved.</p>
-            </div>
-            <div class="uc-section-bottom-container-img-container">
-                <a href="mailto:lavinachhabra79@gmail.com" target="_blank"><img src="./assets/images/icons/email.png" alt=""></a>
-                <a href="https://dribbble.com/lavinachhabra" target="_blank"><img src="./assets/images/icons/dribble.png" alt=""></a>
-                <a href="https://www.linkedin.com/in/lavina-chhabra-572a689a/" target="_blank"><img src="./assets/images/icons/linkedin.png" alt=""></a>
-                <a href="" target="_blank"><img src="./assets/images/icons/medium.png" alt=""></a>
-            </div>
+        <div class="hero-section-bottom-container">
+
         </div>
     </main>
 </body>
