--- a/underConstruction.html
+++ b/underConstruction.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/underConstruction.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
-    <script src="./scripts/uc.js" defer></script>
+    <script src="scripts/uc.js" defer></script>
     <title>La Vie Under Construction</title>
 </head>
 <body>
