--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
     <link rel="stylesheet" href="./style/main.css">
-    <!-- <script src="data/heroMarquee.js" type="module" defer></script> -->
     <script src="scripts/index.js" type="module" defer></script>
     <title>La Vie</title>
 </head>
@@ -38,28 +38,34 @@
             </div>
             <div class="hero-section-bottom-services-container">
             </div>
+            <div class="hero-section-bottom-services-container">
+            </div>
+            <div class="hero-section-bottom-services-container">
+            </div>
         </div>
     </main>
 
     <section id="achievement-section">
-        <div class="achivement-container">
-            <div class="single-achivement-container">
-                <h2 class="title-typo achivement-header">30+</h2>
-                <p class="list-typo achivement-subtitle">projects delivered</p>
+        <div class="achivement-container-center">
+            <div class="achivement-container">
+                <div class="single-achivement-container">
+                    <h2 class="title-typo achivement-header">30+</h2>
+                    <p class="list-typo achivement-subtitle">projects delivered</p>
+                </div>
+                <div class="single-achivement-container">
+                    <h2 class="title-typo achivement-header">20+</h2>
+                    <p class="list-typo achivement-subtitle">clients</p>
+                </div>
+                <div class="single-achivement-container">
+                    <h2 class="title-typo achivement-header">15+</h2>
+                    <p class="list-typo achivement-subtitle">domain experties</p>
+                </div>
             </div>
-            <div class="single-achivement-container">
-                <h2 class="title-typo achivement-header">20+</h2>
-                <p class="list-typo achivement-subtitle">clients</p>
-            </div>
-            <div class="single-achivement-container">
-                <h2 class="title-typo achivement-header">15+</h2>
-                <p class="list-typo achivement-subtitle">domain experties</p>
-            </div>
-        </div>
-        <div class="video-container">
-            <div class="play-outer-circle">
-                <div class="play-inner-circle list-typo">
-                    Play
+            <div class="video-container">
+                <div class="play-outer-circle">
+                    <div class="play-inner-circle list-typo">
+                        Play
+                    </div>
                 </div>
             </div>
         </div>
