--- a/underConstruction.html
+++ b/underConstruction.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/underConstruction.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
@@ -34,10 +35,10 @@
                 <p>&copy; 2023 La Vie Design Studio LLP. All rights reserved.</p>
             </div>
             <div class="uc-section-bottom-container-img-container">
-                <a href="mailto:lavinachhabra79@gmail.com" target="_blank"><img src="./assets/images/icons/email.png" alt=""></a>
-                <a href="https://dribbble.com/lavinachhabra" target="_blank"><img src="./assets/images/icons/dribble.png" alt=""></a>
-                <a href="https://www.linkedin.com/in/lavina-chhabra-572a689a/" target="_blank"><img src="./assets/images/icons/linkedin.png" alt=""></a>
-                <a href="" target="_blank"><img src="./assets/images/icons/medium.png" alt=""></a>
+                <a href="mailto:hello@laviedesignstudio.com" target="_blank"><img src="./assets/images/icons/email.png" alt=""></a>
+                <a href="https://dribbble.com/laviedesignstudio" target="_blank"><img src="./assets/images/icons/dribble.png" alt=""></a>
+                <a href="https://www.linkedin.com/company/la-vie-design-studio/" target="_blank"><img src="./assets/images/icons/linkedin.png" alt=""></a>
+                <a href="https://medium.com/@lavinachhabra" target="_blank"><img src="./assets/images/icons/medium.png" alt=""></a>
             </div>
         </div>
     </main>
