--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>La Vie</title>
 </head>
 <body>
-    <nav class="nevbar-container">
+    <nav class="navbar-container">
         <div>
             <img src="./assets/images/logo/navLogo.png" alt="">
         </div>
@@ -19,7 +19,7 @@
             Contact Us
         </button>
     </nav>
-    
+<!-- ------------------------------------------ Hero-Section -------------------------------------------- -->
     <main id="hero-section">
         <div class="hero-section-top-container">
             <div class="hero-section-left-container">
@@ -45,6 +45,7 @@
         </div>
     </main>
 
+<!-- ------------------------------------------ Achievement-Section -------------------------------------------- -->
     <section id="achievement-section">
         <div class="achivement-container-center">
             <div class="achivement-container">
@@ -70,5 +71,20 @@
             </div>
         </div>
     </section>
+
+<!-- ------------------------------------------ Services-Section -------------------------------------------- -->
+
+    <section id="servie-section">
+        <div>
+            
+        </div>
+        <div>
+
+        </div>
+        <div>
+
+        </div>
+    </section>
+
 </body>
 </html>
