--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/DrawSVGPlugin.min.js"></script>
+    <script src="scripts/matter.js" defer></script>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <link rel="stylesheet" href="./style/main.css">
     <script src="scripts/index.js" type="module" defer></script>
@@ -169,8 +169,9 @@
 <!-- ------------------------------------------ Experties-Section -------------------------------------------- -->
 
     <section id="experties-section">
-        
-
+        <h1 class="experties-main-title">Domain</h1>
+        <h3 class="experties-main-subtitle title-typo">Experts</h3>
+        <div id="headerEffectCanvas"></div> 
     </section>
 
     <svg width="176" height="176" viewBox="0 0 176 176" fill="none" xmlns="http://www.w3.org/2000/svg">
