values, askus, designprocess, blogs, footer done

--- a/index.html
+++ b/index.html
@@ -157,9 +157,7 @@
                     <div class="service-single-type-content-container">
                         <div class="service-single-type-title-container">
                             <h1 class="title-typo">Business</h1>
-                            <!-- <svg  id="title-marker-business" width="345" height="112" viewBox="0 0 345 112" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path class="title-marker-path title-marker-business-path" d="M188 86.5711C177.667 90.9045 149.5 96.5711 126 96.5711C94.8552 96.5711 49.5 91.0713 26 76.5711C13.5 71.5713 9 62.0711 9 53.0711C9 34.5713 62 20.7181 87 15.5711C121 8.57129 210.5 5.20825 243 15.5711C277.5 26.5713 301.5 35.0715 315 44.0713C328.5 53.0711 343.5 61.5713 332 71.5713C320.5 81.5713 197.5 101.222 164.5 102.071C131.5 102.921 55.4 104.571 37 96.5711" stroke="#ECDE62" stroke-width="17"/>
-                            </svg> -->
+ 
                             <svg  id="title-marker-business" width="408" height="133" viewBox="0 0 408 133" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path class="title-marker-path title-marker-business-path" d="M222.425 104.089C210.104 109.401 176.521 116.348 148.501 116.348C111.367 116.348 57.2889 109.606 29.2694 91.8309C14.3654 85.7019 9 74.0563 9 63.0238C9 40.3461 72.1929 23.3644 102.001 17.0551C142.54 8.47447 249.252 4.35195 288.003 17.0551C329.138 30.5395 357.753 40.9593 373.85 51.9916C389.946 63.0238 407.831 73.4436 394.119 85.7019C380.407 97.9603 233.752 122.049 194.406 123.09C155.059 124.131 64.3236 126.154 42.3849 116.348" stroke="#ECDE62" stroke-width="17"/>
                             </svg>
@@ -243,5 +241,129 @@
             </div>
         </div>
     </section>
+
+
+<!-- ------------------------------------------ values-Section -------------------------------------------- -->
+
+    <section id="values-section">
+        <div class="values-section-content-container">
+            <div class="values-single-value-main-container values-yinyang-container">
+                <h1 class="values-bg-values">Values</h1>
+                <div class="values-single-value-text-container">
+                    <h1 class="title-typo">Yin Yang</h1>
+                    <p class="para-typo">Life is about balancing the good and the bad, and we are about understanding that balance and designing for a better world.</p>
+                </div>
+                <div class="values-single-value-img-container">
+                    <img id="values-yinyang-img" src="assets/images/valueSection/yinyang.png" alt="yim-yang">
+                </div>
+                <img id="values-yinyang-shadow-img" src="assets/images/valueSection/shadow.png" alt="yim-yang">
+            </div>
+            
+            <div class="values-single-value-main-container values-commitment-container">
+                <h1 class="values-bg-values values-commitment-bg-values">Values</h1>
+                <div class="values-single-value-text-container">
+                    <h1 class="title-typo">Commitment</h1>
+                    <p class="para-typo">We believe in doing what we say and saying what we do. We want you to trust our process to deliver what's best for your business and for your users.</p>
+                </div>
+                <div class="values-single-value-img-container values-commitment-img-container">
+                    <img id="values-commitment-img" src="assets/images/valueSection/commitment.png" alt="yim-yang">
+                </div>
+                <img id="values-commitment-shadow-img" src="assets/images/valueSection/shadow.png" alt="yim-yang">
+            </div>
+        </div>
+    </section>
+
+<!-- ------------------------------------------ askus-Section -------------------------------------------- -->
+
+    <section id="askus-section">
+        <div class="askus-section-content-container">
+            <div>
+                <h1 class="title-typo askus-title">
+                    Think we can create something amazing together?
+                </h1>
+
+                <div class="askus-section-bottom-container">
+                    <button>Ask Us Anything</button>
+                    <div class="askus-section-bottom-abs-container">
+                            <svg id="arrow-marker-askus" width="157" height="69" viewBox="0 0 157 69" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path class="title-marker-path arrow-marker-askus-path" d="M154 37.2195C152 31.3862 143.7 17.9195 126.5 10.7195C105 1.7195 91.174 9.88169 86.5 14.7195C81.8261 19.5573 74 35.5 81.5 53.5C91.5 71.5 108 49.718 108 32.2188C108 14.7195 85 3.21875 78.5 3.21875C72 3.21875 49.5 -0.28125 31.5 20.7188C17.1 37.5187 9.83333 58.0521 8 66.2188" stroke="black" stroke-width="5"/>
+                                <path class="title-marker-path arrow-marker-askus-pointer-path" d="M3 39C3.66667 47.1667 5.2 64 6 66C6.8 68 27 60.1667 37 56" stroke="black" stroke-width="5"/>
+                            </svg>
+                            <div class="askus-section-bottom-para-container">
+                                <div  class="askus-section-bottom-para">Don't hesitate to ask us anything! No question is silly </div> 
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+<!-- ------------------------------------------ designprocess-Section -------------------------------------------- -->
+
+    <section id="designprocess-section">
+        <div class="designprocess-section-content-container">
+            <div class="designprocess-section-title-container">
+                <h1 class="title-typo">What about our design process and case studies?</h1>
+            </div>
+            <div class="designprocess-section-middle-container">
+                <div class="designprocess-section-middle-text-container">
+                    <p class="para-typo designprocess-wait-what">Wait! Whaaaaat!</p>
+                    <p class="para-typo">We haven't shared it, have we? We want to share them personally to you as per your requirements. So ping us and your wish will be our command.</p>
+                </div>
+                <div>
+                    <img src="assets/images/designProcessSection/case-study.png" alt="">
+                </div>
+            </div>
+            <div class="designprocess-section-bottom-container">
+                <button>Ask Us Anything, Including Our Case Studies</button>
+            </div>
+        </div>
+    </section>
+
+<!-- ------------------------------------------ blogs-Section -------------------------------------------- -->
+    
+    <section id="blogs-section">
+        <div class="blogs-section-content-container">
+            <h1 class="title-typo blogs-section-title">Blogs</h1>
+            <div class="blogs-section-card-container">
+                <div class="blogs-section-img-container">
+                    <img src="assets/images/blogSection/blogs.png" alt="">
+                </div>
+                <div class="blogs-section-card-content-container">
+                    <div>
+                        <h2 class="blogs-section-card-blog-heading">Blog heading</h2>
+                        <p  class="blogs-section-card-blog-content">Lorem ipsum dolor sit amet consectetur. Sit ac nisl aliquet faucibus. Vulputate neque et volutpat pellentesque. Porta sagittis nunc libero quam. Pharetra faucibus dolor donec tempor vel fermentum cras massa magna. Et orci massa elementum sed nulla...</p>
+                    </div>
+                    <div class="blogs-section-card-button-container">
+                        <button class="blogs-btn blogs-read-more-btn">Read More</button>
+                        <button class="blogs-btn">View All Blogs</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+<!-- ------------------------------------------ footer-Section -------------------------------------------- -->
+
+    <footer id="footer-section">
+        <div class="footer-section-content-container">
+            <div class="footer-section-top-container">
+                <h1 class="title-typo footer-title">Creating invisible <br/> experiences</h1>
+                <p>Because good design is invisible!</p>
+                <button>Contact Us</button>
+            </div>
+            <div class="footer-section-bottom-container">
+                <div class="footer-section-bottom-container-copy-container">
+                    <p>&copy; 2023 La Vie Design Studio LLP. All rights reserved.</p>
+                </div>
+                <div class="footer-section-bottom-container-img-container">
+                    <a href="mailto:hello@laviedesignstudio.com" target="_blank"><img src="./assets/images/icons/email.png" alt=""></a>
+                    <a href="https://dribbble.com/laviedesignstudio" target="_blank"><img src="./assets/images/icons/dribble.png" alt=""></a>
+                    <a href="https://www.linkedin.com/company/la-vie-design-studio/" target="_blank"><img src="./assets/images/icons/linkedin.png" alt=""></a>
+                    <a href="https://medium.com/@lavinachhabra" target="_blank"><img src="./assets/images/icons/medium.png" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
