remaining interaction completed

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     </div>
                     <div class="blogs-section-card-button-container">
                         <button class="blogs-btn blogs-read-more-btn">Read More</button>
-                        <button class="blogs-btn">View All Blogs</button>
+                        <button class="blogs-btn blogs-view-all-btn">View All Blogs</button>
                     </div>
                 </div>
             </div>
@@ -348,6 +348,9 @@
     <footer id="footer-section">
         <div class="footer-section-content-container">
             <div class="footer-section-top-container">
+                <svg id="title-marker-footer-invisible" width="345" height="112" viewBox="0 0 345 112" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path class="title-marker-path title-marker-footer-invisible-path" d="M188 86.5711C177.667 90.9045 149.5 96.5711 126 96.5711C94.8552 96.5711 49.5 91.0713 26 76.5711C13.5 71.5713 9 62.0711 9 53.0711C9 34.5713 62 20.7181 87 15.5711C121 8.57129 210.5 5.20825 243 15.5711C277.5 26.5713 301.5 35.0715 315 44.0713C328.5 53.0711 343.5 61.5713 332 71.5713C320.5 81.5713 197.5 101.222 164.5 102.071C131.5 102.921 55.4 104.571 37 96.5711" stroke="#ECDE62" stroke-width="17"/>
+                </svg>
                 <h1 class="title-typo footer-title">Creating invisible <br/> experiences</h1>
                 <p>Because good design is invisible!</p>
                 <button>Contact Us</button>
