loading complete responsive in progress

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
 <body>
 <!-- ------------------------------------------ loading-section -------------------------------------------- -->
     <div id="loader">
-        Loading...
+        <div class="loader-col"><h1 class="loading-h1">Loading...</h1></div>
+        <div class="loader-col"></div>
+        <div class="loader-col"><h1 class="loading-h1">Loading...</h1></div>
+        <div class="loader-col"></div>
+        <div class="loader-col"><h1 class="loading-h1">Loading...</h1></div>
+        <div class="loader-col"></div>
+        <div class="loader-col"><h1 class="loading-h1">Loading...</h1></div>
+        <div class="loader-col"></div>
     </div>
 <!-- ------------------------------------------ contactus-section -------------------------------------------- -->
     <section id="contact-section">
@@ -84,9 +91,20 @@
                             <path class="title-marker-path arrow-marker-contactus-pointer-path" d="M66.5261 156.81C58.4652 158.279 41.8086 161.155 39.6697 160.9C37.5308 160.645 39.869 139.106 41.3055 128.368" stroke="white" stroke-width="5"/>
                         </svg>                            
                     <!-- </div> -->
-                    <div>
+                    <div class="contactus-form-img-img-container">
                         <img src="assets/images/contactUsSection/contact-us.png" alt="whatsup">
                     </div>
+                </div>
+            </div>
+            <div class="contactus-section-bottom-container">
+                <div class="footer-section-bottom-container-copy-container">
+                    <p>&copy; 2023 La Vie Design Studio LLP. All rights reserved.</p>
+                </div>
+                <div class="footer-section-bottom-container-img-container">
+                    <a href="mailto:hello@laviedesignstudio.com" target="_blank"><img src="./assets/images/icons/email.png" alt=""></a>
+                    <a href="https://dribbble.com/laviedesignstudio" target="_blank"><img src="./assets/images/icons/dribble.png" alt=""></a>
+                    <a href="https://www.linkedin.com/company/la-vie-design-studio/" target="_blank"><img src="./assets/images/icons/linkedin.png" alt=""></a>
+                    <a href="https://medium.com/@lavinachhabra" target="_blank"><img src="./assets/images/icons/medium.png" alt=""></a>
                 </div>
             </div>
             <!-- <button id="contactCloseBtn">close</button> -->
@@ -102,8 +120,8 @@
         </button>
     </nav>
 <!-- ------------------------------------------ mouse-cursor -------------------------------------------- -->
-    <div class="mouse-cursor"></div>
-    <div class="mouse-cursor-follow"></div>
+    <!-- <div class="mouse-cursor"></div>
+    <div class="mouse-cursor-follow"></div> -->
 <!-- ------------------------------------------ Hero-Section -------------------------------------------- -->
     <main id="hero-section">
         <div class="hero-section-top-container">
