--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                 <h1 class="values-bg-values">Valules</h1>
                 <div class="value-section-static-img-container">
                     <div id="value-section-static-img-1" class="value-section-static-bg-img">
-                        <div class="values-single-value-img-container">
+                        <div class="values-single-value-img-container values-yinyang-img-container">
                             <img id="values-yinyang-img" src="assets/images/valueSection/yinyang.png" alt="yim-yang">
                             <img id="values-yinyang-shadow-img" src="assets/images/valueSection/shadow.png" alt="yim-yang">
                         </div>
